--- a/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
+++ b/MediaBrowser.Model.net35/MediaBrowser.Model.net35.csproj
@@ -1032,6 +1032,9 @@
     <Compile Include="..\MediaBrowser.Model\Session\UserDataChangeInfo.cs">
       <Link>Session\UserDataChangeInfo.cs</Link>
     </Compile>
+    <Compile Include="..\mediabrowser.model\social\SocialShareInfo.cs">
+      <Link>Social\SocialShareInfo.cs</Link>
+    </Compile>
     <Compile Include="..\MediaBrowser.Model\Sync\CompleteSyncJobInfo.cs">
       <Link>Sync\CompleteSyncJobInfo.cs</Link>
     </Compile>
